--- a/app/src/main/res/layout/colorpuzzle_layout.xml
+++ b/app/src/main/res/layout/colorpuzzle_layout.xml
@@ -5,19 +5,40 @@
     android:background="@color/background">
 
 
+
     <GridLayout
         android:id="@+id/gridLayout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
         android:columnCount="3"
-        android:rowCount="3" >
-    </GridLayout>
+        android:rowCount="3">
 
-    <Button
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:text="fuck"
-        />
+        <Button
+            android:layout_row="0"
+            android:layout_column="0"
+
+            />
+
+        <Button
+            android:layout_row="0"
+            android:layout_column="1"
+
+            />
+
+        <Button
+            android:layout_row="0"
+            android:layout_column="2"
+
+            />
+
+        <Button
+            android:layout_row="1"
+            android:layout_column="0"
+
+            />
+
+
+    </GridLayout>
 
 </RelativeLayout>
