--- a/app/src/main/res/layout/wordle_layout.xml
+++ b/app/src/main/res/layout/wordle_layout.xml
@@ -745,7 +745,7 @@
 
     </RelativeLayout>
 
-    <!-- CurrencyBuy RelativeLayout -->
+    <!-- Shop RelativeLayout -->
     <LinearLayout
         android:id="@+id/shopLL"
         android:layout_width="200dp"
@@ -754,8 +754,7 @@
         android:orientation="vertical"
         android:padding="20dp"
         android:gravity="center"
-        android:background="@drawable/popup_background"
-        android:visibility="gone">
+        android:background="@drawable/popup_background">
 
         <RelativeLayout
             android:layout_width="160dp"
