--- a/app/src/main/res/layout/colorpuzzle_layout.xml
+++ b/app/src/main/res/layout/colorpuzzle_layout.xml
@@ -58,6 +58,8 @@
             android:layout_width="50dp"
             android:layout_height="50dp"
             app:lottie_rawRes="@raw/heartbreak"
+            app:lottie_asyncUpdates="enabled"
+            app:lottie_cacheComposition="true"
             />
 
         <com.airbnb.lottie.LottieAnimationView
@@ -65,6 +67,8 @@
             android:layout_width="50dp"
             android:layout_height="50dp"
             app:lottie_rawRes="@raw/heartbreak"
+            app:lottie_asyncUpdates="enabled"
+            app:lottie_cacheComposition="true"
             />
 
         <com.airbnb.lottie.LottieAnimationView
@@ -72,6 +76,8 @@
             android:layout_width="50dp"
             android:layout_height="50dp"
             app:lottie_rawRes="@raw/heartbreak"
+            app:lottie_asyncUpdates="enabled"
+            app:lottie_cacheComposition="true"
             />
     </LinearLayout>
 
