--- a/app/src/main/res/layout/wordle_layout.xml
+++ b/app/src/main/res/layout/wordle_layout.xml
@@ -442,16 +442,6 @@
         app:lottie_rawRes="@raw/blast"
         android:visibility="gone"/>
 
-    <!-- Wand AnimationView -->
-    <com.airbnb.lottie.LottieAnimationView
-        android:id="@+id/lavWand"
-        android:layout_width="match_parent"
-        android:layout_height="150dp"
-        android:layout_alignParentBottom="true"
-        android:layout_marginBottom="50dp"
-        app:lottie_rawRes="@raw/wand"
-        android:visibility="gone"/>
-
     <!-- Skip AnimationView -->
     <com.airbnb.lottie.LottieAnimationView
         android:id="@+id/skipLAV"
@@ -473,7 +463,7 @@
     <ImageView
         android:id="@+id/backIconIV"
         style="@style/BackImageView"
-        android:onClick="goToHome" />
+        android:onClick="goBack" />
 
     <!-- Home ImageView -->
     <ImageView
