--- a/app/src/main/res/layout/colorpuzzle_layout.xml
+++ b/app/src/main/res/layout/colorpuzzle_layout.xml
@@ -4,6 +4,18 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/background">
 
+    <com.airbnb.lottie.LottieAnimationView
+        android:id="@+id/lavBackground"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_centerInParent="true"
+        app:lottie_rawRes="@raw/background_stars"
+        android:scaleType="centerCrop"
+        app:lottie_asyncUpdates="enabled"
+        app:lottie_cacheComposition="true"
+        app:lottie_autoPlay="true"
+        app:lottie_loop="true" />
+
     <!--Grid LL-->
     <LinearLayout
         android:layout_width="match_parent"
