--- a/app/src/main/res/layout/tictactoevs_layout.xml
+++ b/app/src/main/res/layout/tictactoevs_layout.xml
@@ -5,6 +5,18 @@
     android:layout_height="match_parent"
     android:background="@color/background">
 
+    <com.airbnb.lottie.LottieAnimationView
+        android:id="@+id/lavBackground"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_centerInParent="true"
+        app:lottie_rawRes="@raw/background_stars"
+        android:scaleType="centerCrop"
+        app:lottie_asyncUpdates="enabled"
+        app:lottie_cacheComposition="true"
+        app:lottie_autoPlay="true"
+        app:lottie_loop="true" />
+
     <RelativeLayout
         android:layout_width="300dp"
         android:layout_height="120dp"
